<resources>
    <string name="app_name">GoogleBooksClient</string>
    <string name="activity_title">Book Search</string>
    <string name="book_authors_hint">Book authors</string>
    <string name="book_title_hint">Book title</string>
    <string name="button_search">SEARCH BOOKS</string>
    <string name="all">all</string>
    <string name="books">books</string>
    <string name="magazines">magazines</string>
    <string name="results_title">Results</string>
    <string name="url_text">URL del Libro</string>
</resources>