<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/activity_title"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAuthors"
            android:layout_width="363dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:hint="@string/book_authors_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBook"
            android:layout_width="363dp"
            android:layout_height="42dp"
            android:layout_marginTop="80dp"
            android:hint="@string/book_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:onClick="searchBooks"
            android:text="@string/button_search"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBook" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchButton">

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/radioButtonBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/books" />

            <RadioButton
                android:id="@+id/radioButtonMagazine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/magazines" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_title"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/tvAppTitle"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tvAppTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvResultTitle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                tools:listitem="@layout/book_item">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

